tests/fail/elaboration/unification/mismatch/arrow-param-type.snap
stdout = ''
stderr = '''
error: mismatched types
  ┌─ tests/fail/elaboration/unification/mismatch/arrow-param-type.fathom:3:34
  │
3 │ fun (A : Type) -> fun (a : A) -> a -> A
  │                                  ^ type mismatch, expected `Type`, found `A`
  │
  = expected `Type`
       found `A`

'''
